# man-on-a-mission

./: .env.sample  .gitignore  .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  renovate.json  rust-toolchain.toml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-and-release.yml  commitlint.yml  dispatcher.yml
migrations/: 1_initial.sql
src/: main.rs
src/commands/: bot_commands.rs  mod.rs
src/operations/: bot_operations.rs  mod.rs  schema.rs
