[package]
name = "man-on-a-mission"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1.0.78"
thiserror = "1.0.53"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "fmt",
] }
dotenvy = "0.15.7"
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
